# DeepLearning-Indepth

./: .gitignore  README.md  basics.ipynb  fundamentals_of_deeplearning.ipynb  main.py  pyproject.toml  requirements.txt  tensors.ipynb
deepLearning/: basics.ipynb  data_management.ipynb  downloads.py  fundamentals_of_deeplearning.ipynb  img_classification.ipynb  tensors.ipynb
deepLearning/convolutional_networks/: basics.ipynb
fastapi/: main.py  templating.py
flask/intro/: app.py
flask/intro/instance/: test.db
flask/intro/static/css/: main.css
flask/intro/templates/: base.html  index.html
langchain/: basic.ipynb  basics.py
openai/: Utils.py  app.py  basic.py  main.ipynb  practice.md  practice.py
openai/assistantAPI/: chat.py  main.py
openai/deepchat/: app.py
openai/deepchat/client/: openai_client.py
openai/deepchat/memory/: chat_memory.py
openai/miniChatGPT/client/: logger.py  openai_client.py
openai/miniChatGPT/memory/: chat_memory.py
openai/miniChatGPT/ui/: app.py
openai/newsSummarizer/: openal_tool_calling.py  settings.py  utils.py
openai/tools/: assistantapi.py
pydantic/: basic.ipynb
pydantic/oop_projects/: langchain_mimic.py  schema.py  test.ipynb
rag/: app.py  basic.ipynb  main.py
unstructured_data_processing/: Utils.py  basic.ipynb
unstructured_data_processing/example_files/: el_nino.html  medium_blog.html
