[project]
name = "deeplearning-indepth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.135.3",
    "flask>=3.1.3",
    "huggingface>=0.0.1",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.42.0",
]
