[project]
name = "deeplearning-indepth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "directory-tree>=1.0.0",
    "fastai>=2.8.7",
    "fastapi[all]>=0.135.3",
    "flask>=3.1.3",
    "huggingface>=0.0.1",
    "ipython>=9.10.1",
    "lab>=8.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "panel>=1.8.10",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pikepdf>=10.5.1",
    "pypdf>=6.9.2",
    "python-pptx>=1.0.2",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "unstructured>=0.22.16",
    "unstructured-client>=0.43.2",
    "unstructured-inference>=1.2.0",
    "unstructured-pytesseract>=0.3.15",
    "uvicorn>=0.42.0",
]
